fix admin panel error

--- a/doctor_admin_panel/application/views/index.html
+++ b/doctor_admin_panel/application/views/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-        <title>Admiria - Responsive Flat Admin Dashboard</title>
+        <title>Responsive Flat Admin Dashboard</title>
         <meta content="Admin Dashboard" name="description" />
         <meta content="Themesbrand" name="author" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -229,7 +229,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        2017 © Admiria <span class="text-muted hidden-xs-down pull-right">Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</span>
+                        2017 <span class="text-muted hidden-xs-down pull-right">awesome admin panel <i class="mdi mdi-heart text-danger"></i> </span>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,16 @@
         <!-- End Footer -->
 
 
-       
+        <!-- jQuery  -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/tether.min.js"></script><!-- Tether for Bootstrap -->
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/modernizr.min.js"></script>
+        <script src="assets/js/waves.js"></script>
+        <script src="assets/js/jquery.slimscroll.js"></script>
+        <script src="assets/js/jquery.nicescroll.js"></script>
+        <script src="assets/js/jquery.scrollTo.min.js"></script>
+
         <!-- Peity chart JS -->
         <script src="assets/plugins/peity-chart/jquery.peity.min.js"></script>
 
